--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,5 +1,6 @@
 university: Univerzita Pardubice
-faculty: Fakulta ekonomická
+faculty: Fakulta ekonomicko-správní
+specialization: Digitální podnikání
 
 thesis: Inovace aplikace pro zobrazování poloh vozidel MHD
 author: Jan Volhejn
